Fixed alignment issue in edit mode

--- a/src/scss/quadrone/group.scss
+++ b/src/scss/quadrone/group.scss
@@ -31,6 +31,7 @@
     .actor-subtitle {
       max-height: 1.25rem;
       min-height: 1.25rem;
+      align-content: center;
 
       .pill {
         flex: 0 1 auto;
